# neocloud

./: .gitignore  README.md  agents.md
backend/agent/: README.md  env.example  makefile  pyproject.toml
backend/agent/chatbot/: agent.py  app.py  config.py
backend/agent/chatbot/routers/: __init__.py
backend/agent/scripts/: pg-essays.py
backend/agent/terraform/: locals.tf  variables.tf
backend/agent/terraform/docs/: DEPLOY_ENV.md  TERRAFORM_ARCHITECTURE_GUIDE.md
backend/agent/terraform/module/acm/: main.tf  outputs.tf
backend/agent/terraform/module/cluster/: main.tf  variables.tf
backend/agent/terraform/module/dns/: main.tf  outputs.tf  variables.tf
backend/agent/terraform/module/environment/: main.tf
backend/agent/terraform/module/network/: locals.tf  nat_instance.tf  outputs.tf  security_group.tf
backend/neocloud/: .dockerignore  Dockerfile  README.md  alembic.ini  build.sh  deploy.sh  docker-compose.yml  env.example  makefile  pyproject.toml
backend/neocloud/alembic/: env.py
backend/neocloud/alembic/versions/: 20260311_1100_create_operator_instance_tables.py
backend/neocloud/api/: agent.py  app.py  brokkr.py  config.py  database.py
backend/neocloud/api/auth/: __init__.py  dependencies.py  exceptions.py  jwt.py  schemas.py
backend/neocloud/api/operator/: __init__.py  demo_data.py  device_source.py  models.py  repository.py  schemas.py  service.py
backend/neocloud/api/routers/: __init__.py  ai_chat.py  auth.py  brokkr.py  operator.py
backend/neocloud/terraform/: .terraform.lock.hcl  backend.tf  main.tf  outputs.tf  variables.tf
(+63 files in other folders)
