[project]
name = "neocloud-agent"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.16.5",
    "asyncpg>=0.30.0",
    "email-validator>=2.2.0",
    "fastapi>=0.118.0",
    "httpx>=0.28.1",
    "pydantic-ai-slim[anthropic,google,openai]>=1.22.0",
    "pydantic-settings>=2.6.0",
    "PyJWT[crypto]>=2.10.1",
    "python-dotenv>=1.0.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "starlette>=0.48.0",
    "uvicorn>=0.37.0",
    "watchfiles>=1.1.0",
]

[dependency-groups]
dev = [
    "ruff>=0.15.5",
]

[tool.setuptools.packages.find]
include = ["api*"]
exclude = ["testing*"]

[tool.ruff.format]
docstring-code-format = false
quote-style = "single"
